# pattern-index

./: .gitignore  AGENTS.md  README.md  STATUS.md  SYSTEM_MAP.md  pyproject.toml  streamlit_app.py
.github/workflows/: ci.yml
decisions/: DEC-PIX-001-taxonomy-curation-policy.md
docs/: first-pr.md  product-brief.md
pattern_index/: __init__.py  cli.py  model.py  scoring.py
patterns/: 2026-Q2-retro.md  _taxonomy.yaml
patterns/citation-faithful-extraction/applications/: ai-field-brief-DEC-011.md  supplier-risk-rag-agent-DEC-017.md
patterns/dec-then-implement/applications/: chip-supply-chain-map-DEC-004.md  procurement-negotiation-lab-DEC-027.md
patterns/eval-as-gate/applications/: supplier-risk-rag-agent-DEC-014.md  trace-to-eval-harness-DEC-008.md
patterns/typed-artifact-discipline/applications/: ai-field-brief-DEC-006.md  procurement-negotiation-lab-DEC-021.md
patterns/voice-lint-as-spec-check/applications/: ai-field-brief-DEC-009.md  pattern-index-DEC-PIX-001.md
reports/: 2026-Q2-retro.jsonl
schemas/: pattern_application.schema.json
scripts/: validate_outcomes.py  validate_schemas.py  voice_lint.py
specs/0001-foundation/: acceptance.md  design.md  requirements.md  tasks.md
specs/0002-design/: acceptance.md  design.md  requirements.md  tasks.md
src/pattern_index/: __init__.py  cli.py  frontmatter.py  show.py  validators.py
src/pattern_index/mine/: __init__.py  (+1 more)
tests/: test_dec_walker.py  test_dec_walker_cross_domain.py  test_model.py  test_retro_writer.py  test_scoring.py  test_show.py  test_validate_outcomes.py
tests/fixtures/: AGENTS.md
(+3 files in other folders)
