[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pattern-index"
version = "0.1.0"
description = "Quarterly DEC pattern mining and outcome reporting"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  "jsonschema>=4.22",
  "pyyaml>=6.0",
]

[project.scripts]
pattern-index = "pattern_index.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.0",
]

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/pattern_index"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
